--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
   </section>
 
   <section id="gallery">
-    <h2>Independence Day 2025</h2>
+    <h2>Independence Day Celebration 2025</h2>
     <div class="gallery-grid">
       <img src="img1.jpg.jpeg" alt="Society View 1" onclick="openLightbox(this.src)">
       <img src="img2.jpg.jpeg" alt="Society View 2" onclick="openLightbox(this.src)">
@@ -240,3 +240,4 @@
   </script>
 </body>
 </html>
+
