--- a/index.html
+++ b/index.html
@@ -217,6 +217,19 @@
     <p><strong>📞 Phone:</strong> +91 9592604465</p>
     <p><strong>📧 Email:</strong> surindraenclavedevelopment@gmail.com</p>
     <p><strong>📍 Address:</strong> High Ground Road, Zirakpur, Punjab 140603</p>
+<!-- Google Map Embed -->
+  <div style="margin-top:1.5rem; text-align:center;">
+    <iframe 
+      src="https://www.google.com/maps?q=30.64811,76.79175&hl=en&z=16&output=embed"
+      width="100%" 
+      height="400" 
+      style="border:0; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.2);" 
+      allowfullscreen="" 
+      loading="lazy" 
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+  </div>
+</section>
   </section>
 
   <footer>
@@ -240,4 +253,5 @@
   </script>
 </body>
 </html>
+
 
