--- a/index.html
+++ b/index.html
@@ -189,8 +189,12 @@
   </section>
 
   <section id="about">
-    <h2>About Us</h2>
-    <p>Surindra Enclave is a well-planned residential community where all residents live together in harmony. We celebrate every festival with joy and unity, creating a warm and inclusive atmosphere. Our society offers a safe and secure environment for families. The Residents Welfare Association actively works to maintain cleanliness, ensure harmony, and foster a vibrant social life for everyone.</p>
+    <h2>About Surindra Enclave Socity</h2>
+    <p>Surindra Enclave is a thoughtfully designed residential community where harmony and togetherness define everyday life. Home to 120 families, our society embraces the joy of celebrating every festival with unity, creating a warm and inclusive atmosphere for all.
+
+Nestled close to nature and away from the hustle and bustle of city traffic, Surindra Enclave offers a peaceful environment with the safety and security every family deserves. The Residents Welfare Association plays an active role in maintaining cleanliness, promoting social harmony, and encouraging a vibrant community spirit.
+
+Our colony is blessed with scenic beauty—residents wake up to the golden sunrise over lush green fields, with the majestic Kasauli hills forming a breathtaking backdrop. It is not just a place to live, but a place to belong, where nature and community come together in perfect balance.</p>
   </section>
 
   <section id="amenities">
@@ -253,5 +257,6 @@
   </script>
 </body>
 </html>
+
 
 
