--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ Our colony is blessed with scenic beauty—residents wake up to the golden sunri
     <h2>Contact Us</h2>
     <p><strong>📞 Phone:</strong> +91 9592604465</p>
     <p><strong>📧 Email:</strong> surindraenclavedevelopment@gmail.com</p>
-    <p><strong>📍 Address:</strong> High Ground Road, Zirakpur, Punjab 140603</p>
+    <p><strong>📍 Address:</strong> Surindra Enclave, Airforce Station HighGround Road, Zirakpur, Punjab 140603</p>
 <!-- Google Map Embed -->
   <div style="margin-top:1.5rem; text-align:center;">
     <iframe 
@@ -257,6 +257,7 @@ Our colony is blessed with scenic beauty—residents wake up to the golden sunri
   </script>
 </body>
 </html>
+
 
 
 
