--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 </head>
 <body>
   <header>
-    <h1>Surindra Enclave Socity</h1>
+    <h1>Surindra Enclave society</h1>
     <nav>
       <a href="#about">About</a>
       <a href="#amenities">Amenities</a>
@@ -184,12 +184,12 @@
   </header>
 
   <section class="hero">
-    <h2>Welcome to Surindra Enclave Socity</h2>
+    <h2>Welcome to Surindra Enclave society</h2>
     <p>A peaceful, green, and family-friendly society in the heart of the city.</p>
   </section>
 
   <section id="about">
-    <h2>About Surindra Enclave Socity</h2>
+    <h2>About Surindra Enclave society</h2>
     <p>Surindra Enclave is a thoughtfully designed residential community where harmony and togetherness define everyday life. Home to 120 families, our society embraces the joy of celebrating every festival with unity, creating a warm and inclusive atmosphere for all.
 
 Nestled close to nature and away from the hustle and bustle of city traffic, Surindra Enclave offers a peaceful environment with the safety and security every family deserves. The Residents Welfare Association plays an active role in maintaining cleanliness, promoting social harmony, and encouraging a vibrant community spirit.
@@ -257,6 +257,7 @@ Our colony is blessed with scenic beauty—residents wake up to the golden sunri
   </script>
 </body>
 </html>
+
 
 
 
